style.css
* {
    font-family: 'Atkinson Hyperlegible', sans-serif;
    margin: 0;
}
 #form {
    display: none;
} 
.form {
    background-color: #61a9de;
    width: 300px;
    height: 350px;
    padding: 20px;
    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
}
.bookForm {
    position: absolute;
    left: 40%;
    top: 20%;
}
.formDiv {
    padding: 10px;
    display: flex;
    justify-content: space-between;
    font-size: large;
}
input {
    font-size: large;
}
#button {
   font-size: large; 
   background-color: #61a9de;
   border: none;
   text-decoration-line: underline;
}
#button:hover {
    color: white;
    text-decoration-line: underline;
    text-decoration-color: white;
}
.buttonDiv {
    margin-top: 40px;
    display: flex;
    justify-content: center;
}
.check {
    width: 25px;
    height: 25px;
}
.usersLibrary {
    font-family: 'Passions Conflict', cursive;
    font-size: 50px;
    padding-left: 20px;
}
.bookCard {
    background-color: #61a9de;
    width: 250px;
    height: 300px;
    text-align: center;
    padding: 20px;
    border-radius: 25px;
    margin: 10px;
    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
    overflow-wrap: break-word;
    display: flex;
    flex-direction: column;
    gap: 25px;
}
.bookCardTitle {
    font-size: x-large;
}
.bookCardAuthor {
    font-size: larger;
    font-style: italic;
}
.bookCardPages {
    font-size: medium;
}
.bookCardComment {
    font-size: large;
}
.bookCardRead {
    font-size: large;
}
.header {
    background-color: #F7A76C;
    width: 100vw;
    display: grid;
    padding: 5px;
    grid-template-columns: repeat(3, 1fr);
}
#addNewBook {
    width: 150px;
    height: 40px;
    justify-self: center;
    font-size: large;
    background-color: #F7A76C;
    border: none;
    text-decoration-line: underline;
}
#addNewBook:hover {
    text-decoration-line: underline;
    text-decoration-color: white;
    color: white;
}
.hasRead {
background-color: #C3FF99;
}
.hasNotRead {
background-color: #EC7272;
}
.removeButton {
    background-color: transparent;
    border: none;
    text-decoration-line: underline;
    font-size: large;
}
.removeButton:hover {
    text-decoration-line: underline;
    text-decoration-color: white;
    color: white;
}
.bookCardContainer {
    display: grid;
    grid-template-columns: repeat(auto-fit, 300px);
    gap: 20px;
    margin-top: 20px;
    margin-left: 20px;
}

